# AIInsights

ai-insights-agent/: README.md  pyproject.toml
ai-insights-agent/src/ai_insights_agent/: agent.py  config.py  main.py
ai-insights-agent/src/ai_insights_agent/data/: sample_device_timeseries.csv  sample_one_day_data.json  sample_system_timeseries.csv
ai-insights-agent/src/ai_insights_agent/prompts/: system_prompt.txt
ai-insights-agent/src/ai_insights_agent/tools/: __init__.py  fetch.py  metrics.py  profile.py  rank.py  sqlite_store.py
ai-insights-agent/tests/: test_metrics.py  test_rank.py
