[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-insights-agent"
version = "0.1.0"
description = "AI-Insights Agent (tool-calling) with bootstrap slope confidence"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40.0",
  "truststore>=0.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
